--- a/templates/views/login.ejs
+++ b/templates/views/login.ejs
@@ -40,7 +40,7 @@
     <!-- Preloader Start-->
 
 
-    <main class="login-body" data-vide-bg="img/login-bg.mp4" style="height: 110vh;">
+    <main class="login-body" data-vide-bg="img/hero/h1_hero.png" style="height: 110vh;">
         <!-- Login Admin -->
         <form class="form-default" action="login" method="POST" >
             
