--- a/templates/views/register.ejs
+++ b/templates/views/register.ejs
@@ -42,7 +42,7 @@
 
 <!-- Register -->
 
-<main class="login-body" data-vide-bg="img/login-bg.mp4" style="height: 120vh;">
+<main class="login-body" data-vide-bg="img/hero/h1_hero.png" style="height: 120vh;">
     <!-- Login Admin -->
     <form class="form-default" action="/register" method="POST" >
         
