--- a/templates/views/about.ejs
+++ b/templates/views/about.ejs
@@ -189,6 +189,16 @@
                             <p>Full Stack Developer</p>
                         </div>
                     </div>
+ <div class="team-active">
+                    <div class="single-cat text-center">
+                        <div class="cat-icon">
+                            <img src="#" alt="Harshita Singh">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#">Harshita Singh</a></h5>
+                            <p>Front End Developer</p>
+                        </div>
+                    </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
                             <img src="img/dipanshu.png" alt="">
