--- a/templates/views/about.ejs
+++ b/templates/views/about.ejs
@@ -192,7 +192,7 @@
 
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="../img/sakshi.png" alt="Harshita Singh">
+                            <img src="../img/hs.png" alt="Harshita Singh">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Harshita Singh</a></h5>
